--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
